# utils

./: LICENSE  README.md
bank-statements/: convert.py  pyproject.toml
linux/: .zprofile  .zshrc
