[tool.poetry]
name = "bank-statements"
version = "0.1.0"
description = "Parses bank statements from CSV format and renders to a Markdown table"
authors = ["Jon Winsley <jon.winsley@gmail.com>"]
license = "CGL"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
